Uploaded image for project: 'IMPALA'
  1. IMPALA
  2. IMPALA-10880

Individual SummaryStatsCounter is not printed in extended verbosity

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Minor
    • Resolution: Fixed
    • Impala 4.0.0
    • Impala 4.0.1
    • Backend
    • None
    • ghx-label-4

    Description

      impala-profile-tool can display v2 runtime profile (dense format) in varying verbosity level. In extended verbosity, it should print individual SummaryStatsCounter from each fragment instances. Instead, it is currently repeating the aggregated stats for each fragment instances.

      https://github.com/apache/impala/blob/6fe3466/be/src/util/runtime-profile.cc#L2735

      Attachments

        Activity

          People

            rizaon Riza Suminto
            rizaon Riza Suminto
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: