IMPALA-10880: Fix SummaryStatsCounter bug in impala-profile-tool

impala-profile-tool can display v2 runtime profile (dense format) in
varying verbosity level. In extended verbosity, it should print
individual SummaryStatsCounter from each fragment instances. Instead, it
was repeating the same aggregated stats for each fragment instances.
This patch fix the bug by printing the correct individual
SummaryStatsCounter.

Testing:
- Fix and pass observability/test_profile_tool.py.
- Manually verify that impala-profile-tool print different summary stats
  for each fragment instances.

Change-Id: Ifd3b9127bf98f2168eca6b42375d3a8e85c2cffb
Reviewed-on: http://gerrit.cloudera.org:8080/17809
Reviewed-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>
Tested-by: Impala Public Jenkins <impala-public-jenkins@cloudera.com>